fix: Fix back-size to auto on mobile

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h2 {
     h1 {font-size: 3em;}
     .subtitle {font-size: .8em;}
     body {
-        background-attachment: none;
+        background-size: auto;
         padding: 0;
     }
 }
